--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionStrings": {"cadenaSqlServer": ""},
+  "ConnectionStrings": { "cadenaSqlServer": "Data Source=DESKTOP-DDSH79S\\SQLEXPRESS;Initial Catalog=Exchange;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False" },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
